objects/ccrz__E_StorefrontAssociation__c.object
<CustomObject>
    <description>Storefront associations are used to tie other objects in the system to a particular storefront.</description>
    <fields>
        <fullName>ccrz__AccountGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account Group this association applies to.</description>
        <label>Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipLabel>StorefrontAssociations</relationshipLabel>
        <relationshipName>StorefrontAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account this association applies to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC StorefrontAssociations</relationshipLabel>
        <relationshipName>StorefrontAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CommunityName__c</fullName>
        <description>The name of the community this association applies to.  This is the name of the community, not the prefix or path.</description>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this association is a default association.  See the Storefront Associations admin guide for how this field is used.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Object_Id__c</fullName>
        <description>DEPRECATED</description>
        <label>Object Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Object_Type__c</fullName>
        <description>DEPRECATED</description>
        <label>Object Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__RefId__c</fullName>
        <description>The actual id of the object of the type defined in refType.  This field is automatically populated depending on what else is set on the association.  The priority order is Account, then Account Group, then Community Name.</description>
        <externalId>true</externalId>
        <label>RefId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__RefType__c</fullName>
        <description>The type of object this association is referring to.  This field is automatically populated depending on what else is set on the association.  The priority order is Account, then Account Group, then Community Name.  See the ccApiStorefront.TYPE_* values.</description>
        <externalId>true</externalId>
        <label>RefType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The specific storefront this association applies to.</description>
        <label>Storefront</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CC StorefrontAssociation</label>
    <nameField>
        <label>CC StorefrontAssociation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC StorefrontAssociations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>